--- a/InventoryUI/inventory-ui/src/app/billhistory/billhistory.component.html
+++ b/InventoryUI/inventory-ui/src/app/billhistory/billhistory.component.html
@@ -6,6 +6,37 @@
     <p class="text-secondary">Manage and review all bills</p>
   </div>
 
+  <mat-form-field appearance="outline">
+      <mat-label>Time Period</mat-label>
+      <mat-select [(ngModel)]="filter" (ngModelChange)="onSelectChange()">
+        <mat-option value="0">Today</mat-option>
+        <mat-option value="7">Last 7 days</mat-option>
+        <mat-option value="30">Last 30 days</mat-option>
+        <mat-option value="-1">Custom</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <span [hidden]="hideCustomDate">
+<mat-form-field appearance="outline">
+        <mat-label>Start Date</mat-label>
+        <input matInput [matDatepicker]="startPicker" [(ngModel)]="startDateText">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="startPicker"></mat-datepicker-toggle>
+            <mat-datepicker #startPicker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>End Date</mat-label>
+        <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDateText">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="endPicker"></mat-datepicker-toggle>
+            <mat-datepicker #endPicker></mat-datepicker>
+      </mat-form-field>
+
+      <button (click)="onCustomDateSet()" style="margin-left: 10px;" mat-mini-fab
+      aria-label="Example icon button with a menu icon">
+      <mat-icon>refresh</mat-icon>
+    </button>
+  </span>
   <div class="search-card mb-3">
     <div class="search-form">
       <mat-form-field class="search-input">
