--- a/InventoryUI/inventory-ui/src/app/expense/expense.component.scss
+++ b/InventoryUI/inventory-ui/src/app/expense/expense.component.scss
@@ -18,7 +18,7 @@
 .expense-container {
   padding: var(--spacing-lg);
   display: grid;
-  grid-template-columns: 1fr 350px;
+  grid-template-columns: 350px 1fr;
   gap: var(--spacing-lg);
   height: 100%;
   
@@ -173,5 +173,17 @@
         color: var(--text-primary);
       }
     }
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .search-container{
+    max-width: fit-content;
+  }
+  .summary-card{
+    max-width: fit-content;
+  }
+ 
+  .form-column{
+    max-width: fit-content;
   }
 }
