--- a/InventoryUI/inventory-ui/src/app/login/login.component.html
+++ b/InventoryUI/inventory-ui/src/app/login/login.component.html
@@ -33,6 +33,9 @@
           <span>Sign In</span>
         }
       </button>
+      <button mat-raised-button color="secondary" (click)="navigateToRegistration()">
+              New User? Register
+      </button>
     </form>
   </div>
 </div>
