--- a/InventoryUI/inventory-ui/src/app/app.component.html
+++ b/InventoryUI/inventory-ui/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <span class="d-flex app-name-header align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-        <img class="header-logo-image" src="logo.png" >
+        <img class="header-logo-image" src="logo.png" > <h1>{{clentName}}</h1>
       </span>
       <div class="me-lg-auto app-name-header m-2"><h4><app-header></app-header></h4></div>
       @if (isLoggedIn()) {
