--- a/InventoryUI/inventory-ui/src/app/app.component.html
+++ b/InventoryUI/inventory-ui/src/app/app.component.html
@@ -1,35 +1,74 @@
-<header class="p-2 border-bottom">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <span class="d-flex app-name-header align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-        <img class="header-logo-image" src="logo.png" > <h1>{{clentName}}</h1>
-      </span>
-      <div class="me-lg-auto app-name-header m-2"><h4><app-header></app-header></h4></div>
-      @if (isLoggedIn()) {
-        <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0" style="margin-right: 10px;">
-          @for(inroute of routes; track inroute.path; let idx = $index){
-            <li class="c-nav-link"><a (click)="onclickRoute(idx)" class="nav-link px-2 {{idx==selected?'link-secondary':'link-dark'}}">
-              {{inroute.label}}
-            </a></li>
-          }
-        </ul>
+<header class="app-header p-1 border-bottom">
+  <div class="container-fluid">
+    <div class="d-flex align-items-center justify-content-between">
+      <!-- Left side: Menu toggle + Logo -->
+      <div class="d-flex align-items-center">
+        @if (isLoggedIn()) {
+          <button class="btn btn-link menu-toggle me-3" (click)="toggleSidebar()" aria-label="Toggle navigation">
+            <mat-icon>menu</mat-icon>
+          </button>
+        }
+        <span class="d-flex app-name-header align-items-center text-dark text-decoration-none">
+          <img class="header-logo-image" src="logo.png"> 
+          <h1 class="mb-0 ms-2">{{clentName}}</h1>
+        </span>
+      </div>
 
-        <div class="dropdown text-end">
-          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-          </a>
-          <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-            <li><a class="dropdown-item" href="#" (click)="logout()">Sign out</a></li>
-          </ul>
-        </div>
-      } @else {
-        <button class="btn btn-primary" (click)="navigateToLogin()">Login</button>
-      }
+      <!-- Center: Header component -->
+      <div class="header-center">
+        <h4 class="mb-0"><app-header></app-header></h4>
+      </div>
+
+      <!-- Right side: User controls -->
+      <div class="header-controls">
+        @if (isLoggedIn()) {
+          <div class="dropdown">
+            <a href="#" class="d-block link-dark text-decoration-none" 
+               id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="user-avatar">
+                <mat-icon>person</mat-icon>
+              </span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end text-small" aria-labelledby="dropdownUser1">
+              <li><a class="dropdown-item" href="#" (click)="logout()">Sign out</a></li>
+            </ul>
+          </div>
+        } @else {
+          <button class="btn btn-primary" (click)="navigateToLogin()">Login</button>
+        }
+      </div>
     </div>
   </div>
 </header>
 
-<div class="app-body">
-  <router-outlet></router-outlet>
-</div>
+@if (isLoggedIn()) {
+  <!-- Sidebar Navigation -->
+  <nav class="sidebar" 
+       [class.expanded]="sidebarExpanded" 
+       [class.collapsed]="!sidebarExpanded"
+       (mouseenter)="onSidebarMouseEnter()"
+       (mouseleave)="onSidebarMouseLeave()">
+    <div class="sidebar-content">
+      <ul class="nav flex-column">
+        @for(inroute of routes; track inroute.path; let idx = $index){
+          <li class="nav-item">
+            <a class="nav-link" 
+               [class.active]="idx === selected"
+               (click)="onclickRoute(idx)"
+               [title]="inroute.label">
+              <mat-icon class="nav-icon">{{inroute.icon}}</mat-icon>
+              <span class="nav-text" [class.d-none]="!sidebarExpanded">{{inroute.label}}</span>
+            </a>
+          </li>
+        }
+      </ul>
+    </div>
+  </nav>
+}
+
+<main class="main-content" [class.sidebar-expanded]="sidebarExpanded && isLoggedIn()" [class.sidebar-collapsed]="!sidebarExpanded || !isLoggedIn()">
+  <div class="content-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+</main>
 
