--- a/InventoryUI/inventory-ui/src/app/expense/expense.component.scss
+++ b/InventoryUI/inventory-ui/src/app/expense/expense.component.scss
@@ -16,11 +16,9 @@
 }
 
 .expense-container {
-  padding: var(--spacing-lg);
   display: grid;
   grid-template-columns: 350px 1fr;
   gap: var(--spacing-lg);
-  height: 100%;
   
   @media (max-width: 1200px) {
     grid-template-columns: 1fr;
@@ -54,7 +52,7 @@
       border-radius: var(--radius-lg);
       box-shadow: var(--shadow-md);
       overflow: hidden;
-      height: calc(100% - 140px);
+      height: calc(100%);
 
       ag-grid-angular {
         width: 100%;
